Comment response with creator, likes and isLiked